# recipe-app

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  new-features.md  pyproject.toml
backend/: .dockerignore  .env.template  Dockerfile  requirements.txt  vercel.json
backend/db/: create_tables.sql  drop_tables.sql  populate_with_example_data.sql
backend/src/: config.py  main.py
backend/src/authentication/: authentication.py
backend/src/data_providers/: client_interface.py  repository_interface.py
backend/src/models/: ingredient.py  recipe.py
backend/src/utils/: exceptions.py  populate_db.py
frontend/: .env.template  Dockerfile  generate-api-typescript-client.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  Header.tsx  IngredientsFIlter.tsx  RecipeCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.tsx  useGetAllIngredients.tsx  useGetAllRecipes.tsx  useGetRecipe.tsx  useIngredientAPI.tsx  useRecipeAPI.tsx  useScreenWidth.tsx
frontend/src/pages/: AllCocktailsPage.tsx  AllFoodsPage.tsx  Auth.tsx  CocktailRecipePage.tsx  DrinksRecipePage.tsx  DrinksRecipesPage.tsx  ErrorPage.tsx  FoodRecipesPage.tsx  RecipePage.tsx  homePage.tsx
frontend/src/providers/: TelemetryProvider.tsx
frontend/src/styling/: mui.ts
frontend/src/tests/: filter.test.ts
frontend/src/types/: authTypes.ts
frontend/src/utils/: authUtils.ts  filtering.ts  logging.ts  (+1 more)
(+23 files in other folders)
